--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "api",
+  "name": "speed-test-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.3",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "fast-speedtest-api": "^0.3.2",
-    "ping": "^0.4.4",
-    "public-ip": "^7.0.1"
+    "express": "^4.17.1",
+    "fast-speedtest-api": "^0.0.6",
+    "ping": "^0.4.1"
   }
 }
