--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
       },
       {
         "src": "package.json",
-        "use": "@vercel/static-build"
+        "use": "@vercel/static-build",
+        "config":{
+          "distDir":"build"
+        }
+
       }
       
     ],
