--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.7"
   },
   "proxy": "http://localhost:5000"
