--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.4",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
