--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "client": "cd client && npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -13,8 +11,5 @@
     "express": "^4.17.1",
     "fast-speedtest-api": "^0.3.2",
     "ping": "^0.4.0"
-  },
-  "devDependencies": {
-    "concurrently": "^6.5.1"
   }
 }
